[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "First Hexlet Project"
authors = ["ggByron <shtyrbu.ya@gmail.com>"]
readme = "README.md"
packages = [
    { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-calc = "brain_games.scripts.brain_calc:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-games = "brain_games.scripts.brain_games:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
